k8s/demo/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuard
spec:
  selector:
    app: kuard
  ports:
    - port: 8080
  type: ClusterIP
